rs/sol-gen/tests/snapshots/generator__generate_contract_w_address_type.snap
---
source: rs/sol-gen/tests/generator.rs
expression: "String::from_utf8(contract.unwrap().data).unwrap()"
---
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.35;

interface ITokenContract {
    function new(bool _callReply) external returns (bytes32 messageId);

    function tokenSvcBalanceOf(bool _callReply, address owner) external returns (bytes32 messageId);

    function tokenSvcBatch(bool _callReply, address[] calldata recipients) external returns (bytes32 messageId);

    function tokenSvcFixed(bool _callReply, address[3] calldata addrs) external returns (bytes32 messageId);

    function tokenSvcTransfer(bool _callReply, address from, address to, uint128 amount) external returns (bytes32 messageId);
}

contract TokenContractAbi is ITokenContract {
    function new(bool _callReply) external returns (bytes32 messageId) {}

    function tokenSvcBalanceOf(bool _callReply, address owner) external returns (bytes32 messageId) {}

    function tokenSvcBatch(bool _callReply, address[] calldata recipients) external returns (bytes32 messageId) {}

    function tokenSvcFixed(bool _callReply, address[3] calldata addrs) external returns (bytes32 messageId) {}

    function tokenSvcTransfer(bool _callReply, address from, address to, uint128 amount) external returns (bytes32 messageId) {}
}

interface ITokenContractCallbacks {
    function replyOn_new(bytes32 messageId) external;

    function replyOn_tokenSvcBalanceOf(bytes32 messageId, uint128 reply) external;

    function replyOn_tokenSvcBatch(bytes32 messageId, address[] calldata reply) external;

    function replyOn_tokenSvcFixed(bytes32 messageId, address[3] calldata reply) external;

    function replyOn_tokenSvcTransfer(bytes32 messageId, bool reply) external;

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable;
}

contract TokenContractCaller is ITokenContractCallbacks {
    ITokenContract public immutable VARA_ETH_PROGRAM;

    error UnauthorizedCaller();

    constructor(ITokenContract _varaEthProgram) {
        VARA_ETH_PROGRAM = _varaEthProgram;
    }

    modifier onlyVaraEthProgram() {
        _onlyVaraEthProgram();
        _;
    }

    function _onlyVaraEthProgram() internal view {
        if (msg.sender != address(VARA_ETH_PROGRAM)) {
            revert UnauthorizedCaller();
        }
    }

    function replyOn_new(bytes32 messageId) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_tokenSvcBalanceOf(bytes32 messageId, uint128 reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_tokenSvcBatch(bytes32 messageId, address[] calldata reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_tokenSvcFixed(bytes32 messageId, address[3] calldata reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_tokenSvcTransfer(bytes32 messageId, bool reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable onlyVaraEthProgram {
        // TODO: implement this
    }
}
