rs/sol-gen/tests/snapshots/generator__generate_contract_w_events.snap
---
source: rs/sol-gen/tests/generator.rs
expression: "String::from_utf8(contract.unwrap().data).unwrap()"
---
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.35;

interface ITestContract {
    event DoThisEvent(uint32 p1, string p2);

    event DoThisEvent2(uint32, string);

    function create(bool _callReply) external returns (bytes32 messageId);

    function svc1DoThis(bool _callReply, uint32 p1, string calldata p2) external returns (bytes32 messageId);
}

contract TestContractAbi is ITestContract {
    function create(bool _callReply) external returns (bytes32 messageId) {}

    function svc1DoThis(bool _callReply, uint32 p1, string calldata p2) external returns (bytes32 messageId) {}
}

interface ITestContractCallbacks {
    function replyOn_create(bytes32 messageId) external;

    function replyOn_svc1DoThis(bytes32 messageId, uint32 reply) external;

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable;
}

contract TestContractCaller is ITestContractCallbacks {
    ITestContract public immutable VARA_ETH_PROGRAM;

    error UnauthorizedCaller();

    constructor(ITestContract _varaEthProgram) {
        VARA_ETH_PROGRAM = _varaEthProgram;
    }

    modifier onlyVaraEthProgram() {
        _onlyVaraEthProgram();
        _;
    }

    function _onlyVaraEthProgram() internal view {
        if (msg.sender != address(VARA_ETH_PROGRAM)) {
            revert UnauthorizedCaller();
        }
    }

    function replyOn_create(bytes32 messageId) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_svc1DoThis(bytes32 messageId, uint32 reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable onlyVaraEthProgram {
        // TODO: implement this
    }
}
