rs/sol-gen/tests/snapshots/generator__generate_payable_contract.snap
---
source: rs/sol-gen/tests/generator.rs
expression: "String::from_utf8(contract.unwrap().data).unwrap()"
---
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.35;

interface IPayableContract {
    function create(bool _callReply) external payable returns (bytes32 messageId);

    function myServiceDeposit(bool _callReply) external payable returns (bytes32 messageId);

    function myServiceRegularCall(bool _callReply) external returns (bytes32 messageId);

    function myServiceSwapAndRefund(bool _callReply) external payable returns (bytes32 messageId);

    function myServiceWithdraw(bool _callReply) external returns (bytes32 messageId);
}

contract PayableContractAbi is IPayableContract {
    function create(bool _callReply) external payable returns (bytes32 messageId) {}

    function myServiceDeposit(bool _callReply) external payable returns (bytes32 messageId) {}

    function myServiceRegularCall(bool _callReply) external returns (bytes32 messageId) {}

    function myServiceSwapAndRefund(bool _callReply) external payable returns (bytes32 messageId) {}

    function myServiceWithdraw(bool _callReply) external returns (bytes32 messageId) {}
}

interface IPayableContractCallbacks {
    function replyOn_create(bytes32 messageId) external;

    function replyOn_myServiceDeposit(bytes32 messageId) external;

    function replyOn_myServiceRegularCall(bytes32 messageId, bool reply) external;

    function replyOn_myServiceSwapAndRefund(bytes32 messageId, uint128 reply) external payable;

    function replyOn_myServiceWithdraw(bytes32 messageId, uint128 reply) external payable;

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable;
}

contract PayableContractCaller is IPayableContractCallbacks {
    IPayableContract public immutable VARA_ETH_PROGRAM;

    error UnauthorizedCaller();

    constructor(IPayableContract _varaEthProgram) {
        VARA_ETH_PROGRAM = _varaEthProgram;
    }

    modifier onlyVaraEthProgram() {
        _onlyVaraEthProgram();
        _;
    }

    function _onlyVaraEthProgram() internal view {
        if (msg.sender != address(VARA_ETH_PROGRAM)) {
            revert UnauthorizedCaller();
        }
    }

    function replyOn_create(bytes32 messageId) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_myServiceDeposit(bytes32 messageId) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_myServiceRegularCall(bytes32 messageId, bool reply) external onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_myServiceSwapAndRefund(bytes32 messageId, uint128 reply) external payable onlyVaraEthProgram {
        // TODO: implement this
    }

    function replyOn_myServiceWithdraw(bytes32 messageId, uint128 reply) external payable onlyVaraEthProgram {
        // TODO: implement this
    }

    function onErrorReply(bytes32 messageId, bytes calldata payload, bytes4 replyCode) external payable onlyVaraEthProgram {
        // TODO: implement this
    }
}
